# embedded_robocar

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  accelerometer.c  accelerometer_client.c  accelerometer_client.uf2  backup.c  barcode.c  dashboard.c  dashboard.uf2  decoder_half_working.c  ir_sensor_proj.c  irsensor.c  manual_ir_decode.c  wheel_speed.c  wheel_speed.uf2
task_5/: CMakeLists.txt  task_5.c
